--- a/plugins/app/src/main/res/values/strings.xml
+++ b/plugins/app/src/main/res/values/strings.xml
@@ -3,12 +3,15 @@
 
     <!-- Categories -->
     <string name="category">category</string>
-    <string name="category_runtime_styling">Navigation</string>
+    <string name="category_extrusions">Extrusions</string>
+    <string name="category_navigation">Navigation</string>
 
     <!-- Titles -->
     <string name="title_traffic">Traffic Plugin</string>
+    <string name="title_building">Building Plugin</string>
 
     <!-- Descriptions -->
     <string name="description_traffic">Add Traffic layers to any Mapbox basemap.</string>
+    <string name="description_building">Add 3D Building layer to a Mapbox map.</string>
 
 </resources>
