--- a/plugins/app/src/main/res/values/strings.xml
+++ b/plugins/app/src/main/res/values/strings.xml
@@ -4,11 +4,14 @@
     <!-- Categories -->
     <string name="category">category</string>
     <string name="category_runtime_styling">Navigation</string>
+    <string name="category_annotations">Annotations</string>
 
     <!-- Titles -->
     <string name="title_traffic">Traffic Plugin</string>
+    <string name="title_cluster">Marker Cluster Plugin</string>
 
     <!-- Descriptions -->
     <string name="description_traffic">Add Traffic layers to any Mapbox basemap.</string>
+    <string name="description_cluster">Apply clustering to Mapbox markers.</string>
 
 </resources>
